--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -9098,6 +9098,15 @@ zip.file("_micCal.txt", micCal);
       const [loDelay, hiDelay] = getDelayRangeOfFinalSub();
       console.info(`Available bass system volume adjustment range → { ${subLoTrim}dB : ${subHiTrim}dB }`);
       console.info(`Total subwoofer 'delay headroom' available → ${(hiDelay-loDelay).toFixed(2)}ms`);
+      const dynamicBassFilldB = await getDynamicBassFillOfFinalSubdB();
+      if (dynamicBassFilldB != 0) {
+        console.warn(`***Adding ${dynamicBassFilldB}dB dynamic bass fill to compensate for dips!***`);
+        for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
+          customLevel[i] += dynamicBassFilldB;
+          console.info(`${commandId[i].padStart(3, ".")} - shifted: ${customLevel[i] - dynamicBassFilldB}dB → ${customLevel[i]}dB`);
+        }
+        await postNext('Add SPL offset', nChannels, { offset: dynamicBassFilldB });
+      }
     }
     async function getALOffset(idx, isSub) {
       const fltResponse = await fetchSafe('frequency-response?smoothing=1%2F1&ppo=96', idx);
@@ -9640,11 +9649,26 @@ zip.file("_micCal.txt", micCal);
       return Math.round(offset * 2) / 2; // round to nearest 0.5
     }
     async function getFinalSubTrim(idx) {
+      // level final subwoofer using it's bandwidth, limit to 20-120hz
       const initialTrim = await getTrim(idx, 30, 80);
       const startFreq = Math.round(await getLow3dBPoint(idx, 20, 120, initialTrim));
       const endFreq = Math.round(await getHigh3dBPoint(idx, 20, 120, initialTrim));
       const finalTrim = await getTrim(idx, startFreq, endFreq);
       return finalTrim;
+    }
+    async function getDynamicBassFillOfFinalSubdB() {
+      const startFreq = Math.round(await getLow3dBPoint(nChannels, 20, 120));
+      const endFreq = Math.round(await getHigh3dBPoint(nChannels, 20, 120));
+      const subFreqResponse = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', nChannels);
+      const subArray = response2array(subFreqResponse, startFreq, endFreq);
+      const targetArray = response2array(targetResponse, startFreq, endFreq);
+      const arrayLength = Math.min(subArray.length, targetArray.length);
+      let totalDips = 0;
+      for (let i = 0; i < arrayLength; i++) {
+        totalDips += Math.min(subArray[i] - targetArray[i], 0);
+      }
+      const dynamicBassFill = Math.round(-2 * (totalDips / arrayLength)) / 2; // round to nearest 0.5
+      return dynamicBassFill;
     }
     async function alignVol2MLP(indices, mlpIdx) {
       if (indices.length <= 1) { return; }
